--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-iframe": "^1.8.5",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-loader-spinner": "^6.1.6",
+    "react-loaders": "^3.0.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "video.js": "^8.18.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
